# smeargle

./: .editorconfig  Cargo.toml  LICENSE  README.md
src/: locate.rs  main.rs  normalize.rs  serve.rs  state.rs
