[package]
name = "smeargle"
version = "0.1.0"
description = "A simple JSON render server."
authors = ["George Cheng <Gerhut@GMail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
tide = "0.16.0"
surf = "2.3.1"
