[package]
authors = ["George Cheng <Gerhut@GMail.com>"]
description = "A simple JSON render server."
edition = "2018"
name = "smeargle"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-std = {version = "1.10.0", features = ["attributes"]}
dotenv = "0.15.0"
handlebars = "4.1.3"
serde_json = "1.0.68"

[dependencies.surf]
default-features = false
features = ["h1-client-rustls", "middleware-logger", "encoding"]
version = "2.3.1"

[dependencies.tide]
default-features = false
features = ["h1-server", "logger"]
version = "0.16.0"
